--- a/portfolio.html
+++ b/portfolio.html
@@ -57,53 +57,71 @@
           <li class="btn"><button type="button">Дизайн</button></li>
           <li class="btn"><button type="button">Маркетинг</button></li>
         </ul>
-        <!-- примеры -->
+        <!-- примеры-examples  -->
         <section class="examples">
           <ul class="flex-container list">
             <li class="flex-card">
-              <a href=""><img src="./img/img-01.jpg" alt="" width="370" /></a>
-              <h2 class="title">Технокряк</h2>
-              <p>Веб-сайт</p>
+              <img src="./img/img-01.jpg" alt="" width="370" />
+              <div class="card-content">
+                <h2 class="title">Технокряк</h2>
+                <p>Веб-сайт</p>
+              </div>
             </li>
             <li class="flex-card">
-              <a href=""><img src="./img/img-02.jpg" alt="" width="370" /></a>
-              <h2 class="title">Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <img src="./img/img-02.jpg" alt="" width="370" />
+              <div class="card-content">
+                <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+              </div>
             </li>
             <li class="flex-card">
-              <a href=""><img src="./img/img-03.jpg" alt="" width="370" /></a>
-              <h2 class="title">Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <img src="./img/img-03.jpg" alt="" width="370" />
+              <div class="card-content">
+                <h2 class="title">Ресторан Seafood</h2>
+                <p>Приложение</p>
+              </div>
             </li>
             <li class="flex-card">
-              <a href=""><img src="./img/img-04.jpg" alt="" width="370" /></a>
-              <h2 class="title">Проект Prime</h2>
-              <p>Маркетинг</p>
+              <img src="./img/img-04.jpg" alt="" width="370" />
+              <div class="card-content">
+                <h2 class="title">Проект Prime</h2>
+                <p>Маркетинг</p>
+              </div>
             </li>
             <li class="flex-card">
-              <a href=""><img src="./img/img-05.jpg" alt="" width="370" /></a>
-              <h2 class="title">Проект Boxes</h2>
-              <p>Приложение</p>
+              <img src="./img/img-05.jpg" alt="" width="370" />
+              <div class="card-content">
+                <h2 class="title">Проект Boxes</h2>
+                <p>Приложение</p>
+              </div>
             </li>
             <li class="flex-card">
-              <a href=""><img src="./img/img-06.jpg" alt="" width="370" /></a>
-              <h2 class="title">Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <img src="./img/img-06.jpg" alt="" width="370" />
+              <div class="card-content">
+                <h2 class="title">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </div>
             </li>
             <li class="flex-card">
-              <a href=""><img src="./img/img-07.jpg" alt="" width="370" /></a>
-              <h2 class="title">Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <img src="./img/img-07.jpg" alt="" width="370" />
+              <div class="card-content">
+                <h2 class="title">Издание Limited Edition</h2>
+                <p>Дизайн</p>
+              </div>
             </li>
             <li class="flex-card">
-              <a href=""><img src="./img/img-08.jpg" alt="" width="370" /></a>
-              <h2 class="title">Проект LAB</h2>
-              <p>Маркетинг</p>
+              <img src="./img/img-08.jpg" alt="" width="370" />
+              <div class="card-content">
+                <h2 class="title">Проект LAB</h2>
+                <p>Маркетинг</p>
+              </div>
             </li>
             <li class="flex-card">
-              <a href=""><img src="./img/img-09.jpg" alt="" width="370" /></a>
-              <h2 class="title">Growing Business</h2>
-              <p>Приложение</p>
+              <img src="./img/img-09.jpg" alt="" width="370" />
+              <div class="card-content">
+                <h2 class="title">Growing Business</h2>
+                <p>Приложение</p>
+              </div>
             </li>
           </ul>
         </section>
