--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 
   <body>
     <!-- Шапка -->
-    <header class="page-header">
+    <header class="page-header portfolio">
       <div class="conteiner flex">
         <!-- Навигация -->
         <nav class="flex">
@@ -135,13 +135,20 @@
           <span class="logo-item">Web</span
           ><span class="logo-color">Studio</span>
         </a>
-        <ul class="contact-list list">
-          <li>
-            <address>г. Киев, пр-т Леси Украинки, 26</address>
-          </li>
-          <li class="contact-item">info@example.com</li>
-          <li class="contact-item">+38 099 111 11 11</li>
-        </ul>
+        <address>
+          <ul class="contact-list list">
+            <li  class="contact-item">
+             <a href="https://goo.gl/maps/K1fkCE5pKCQjTxw7A" class="link" target="_blank">
+              <span class="footer-address">г. Киев, пр-т Леси Украинки, 26</span></a> 
+            </li>
+            <li class="contact-item">
+              <a href="malto:info@devstudio.com"" class="link">info@example.com</a>
+            </li>
+            <li class="contact-item">
+              <a href="tel:+380961111111" class="link">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
       </div>
     </footer>
   </body>
