change html & css 08

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       </section>
 
       <!-- Особенности-features -->
-      <section>
-        <div class="conteiner feature">
+      <section class="features">
+        <div class="conteiner">
           <ul class="feature-list list">
             <li class="item">
               <h3 class="section-title list">Внимание к деталям</h3>
@@ -93,8 +93,8 @@
       </section>
 
         <!-- Чем мы занимаемся-section -->
-      <section>
-        <div class="conteiner engage">
+      <section class="engage">
+        <div class="conteiner">
           <h2 class="section-title list">Чем мы занимаемся</h2>
           <ul class="section-img list">
             <li>
@@ -126,8 +126,8 @@
       </section>
 
       <!-- Команда-comand -->
-      <section class="section comand">
-        <div class="conteiner comand">
+      <section class="comand">
+        <div class="conteiner">
           <h2 class="section-title list">Наша команда</h2>
           <ul class="comand-list list">
             <li class="card-team">
