--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 
   <body>
     <!-- Шапка -->
-    <header class="page-header portfolio">
+    <header class="page-header border">
       <div class="conteiner flex">
         <!-- Навигация -->
         <nav class="flex">
@@ -49,8 +49,8 @@
 
     <main>
       <!-- portfolio -->
-      <section>
-        <div class="conteiner portfolio">
+      <section class="portfolio">
+        <div class="conteiner">
           <!-- button -->
           <ul class="flex-button list">
             <li class="btn"><button type="button">Все</button></li>
